# VistDF

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  demo.ipynb  docker-compose.yml  hwy00.mp4.truncated.sorted.tracks.jsonl  images-from-api-example.ipynb  pyproject.toml  requirements.dev.txt  setup.py  video-series-example.ipynb
.github/workflows/: check.yml  pages.yml
docs/: _config.yml
docs/docs/usecases/: usecases.md  wildfire-prevention.md
src/: images.py  images_from_api.py  lazy_series.py  video.py  video_series.py
vistdf/: geo_utils.py  images.py  lazy_series.py  object_detection_utils.py  video.py  video_series.py
