[tool.poetry]
name = "visual-dataframe"
version = "0.1.0"
description = ""
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}
jupyterlab-lsp = "^5.1.0"
jupyterlab = "^4.2.3"
notebook = "^7.2.1"
jupyterlab-vim = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
